# LifeProof

./: .gitignore  .npmrc  .prettierignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: keeper.yml
client/: generate-client.ts
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/api/vault/: route.ts
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/keeper/: page.tsx
frontend/src/app/upcoming/: page.tsx
frontend/src/components/: Navbar.tsx  VaultCard.tsx  WalletButton.tsx  index.ts
frontend/src/hooks/: index.ts  useProofPol.ts  useVault.ts
frontend/src/lib/: constants.ts  error.ts  utils.ts
frontend/src/lib/proof-pol/: client.ts
frontend/src/lib/proof-pol/accounts/: index.ts
frontend/src/lib/proof-pol/errors/: index.ts  proofPol.ts
frontend/src/lib/proof-pol/instructions/: claimVault.ts  closeVault.ts  index.ts  initializeVault.ts  (+1 more)
frontend/src/providers/: AppProvider.tsx  WalletProvider.tsx  index.ts
keeper/: README.md  keeper.ts
programs/proof_pol/: Cargo.toml
programs/proof_pol/src/: constants.rs  error.rs  kamino_cpi.rs  lib.rs
programs/proof_pol/src/instructions/: claim.rs  close.rs  initialize_vault.rs  mod.rs  proof_life.rs
programs/proof_pol/src/state/: commitment_vault.rs  mod.rs  owner_profile.rs
tests/: claim.ts  close.ts  initialize_vault.ts  intialize_vault.rs  proof_life.ts  proof_pol.ts
(+1 files in other folders)
