[package]
name = "proof_pol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_pol"

[features]
default = []
# Build with `anchor build -- --features mainnet` to activate Kamino yield CPI.
# On devnet (default) the flag is absent and tokens sit in the vault ATA.
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
init-if-needed = []

[dependencies]
anchor-lang    = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl     = { version = "0.32.1", features = ["token", "associated_token"] }
# Kamino lending CPI interface — only the CPI feature is needed (no entrypoint).
# Used in initialize_vault (deposit) and claim/close (redeem) under #[cfg(feature="mainnet")].
# kamino_lending added via raw CPI (AccountInfo + instruction data) to avoid
# solana-program version conflicts. No git dep needed — see kamino_cpi.rs.

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("mainnet"))'] }
